--- a/_source/index.html
+++ b/_source/index.html
@@ -3,35 +3,16 @@ layout: default
 title: Welcome!
 ---
 
+<div class="col eight tablet-full mobile-full">
+
 <h1>this is the default index page!</h1>
 
-<!-- breaks, because we don't have any CSS yet -->
-<br>
+<p>To get started, see the readme.md file. View the source for this page to see how to split up the grid and position elements, or view <a href="http://foundation.zurb.com/docs/grid.php">the foundation documents</a></p>
 
-<p>To get started, see the readme.md file. View the source for this page to see how to split up the grid and position elements, or view <a href="http://foundation.zurb.com/docs/grid.php">the foundation documents</a></p>.
-
-<!-- more ugly breaks -->
-<br>
-<br>
-
-<!-- a new row in our 12-column grid -->
-<div class="row"> 
-
-<!-- one third -->
-<div class="four columns">
-	<p>Some Stuff</p>
-</div>
-
-<!-- one third -->
-<div class="four columns">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat obcaecati eaque soluta rerum tempora molestias neque asperiores sit nulla error accusantium eveniet quia omnis impedit enim aspernatur sint ad earum.</p>
-</div>
-
-<!-- one third -->
-<div class="four columns">
-	<p>Even More Important Stuff</p>
 </div>
 
 
-<!-- end row -->
+<div class="col four tablet-full mobile-full">
+
+<p>123</p>
 </div>
