--- a/_source/index.html
+++ b/_source/index.html
@@ -2,17 +2,18 @@
 layout: default
 title: Welcome!
 ---
+<div class="column nine">
+    
+  {% include orbit.html %}
 
-<div class="col eight tablet-full mobile-full">
+  <div class="column">
 
-<h1>this is the default index page!</h1>
+  <h1>this is the default index page!</h1>
 
-<p>To get started, see the readme.md file. View the source for this page to see how to split up the grid and position elements, or view <a href="http://foundation.zurb.com/docs/grid.php">the foundation documents</a></p>
+  <p>To get started, see the readme.md file. View the source for this page to see how to split up the grid and position elements, or view <a href="http://foundation.zurb.com/docs/grid.php">the foundation documents</a></p>
+
+  </div>
 
 </div>
 
-
-<div class="col four tablet-full mobile-full">
-
-<p>123</p>
-</div>
+{% include sidebar.html %}
