--- a/_source/category.html
+++ b/_source/category.html
@@ -2,19 +2,16 @@
 layout: default
 title: Category
 ---
-
+<div class="row" id="main">
 <div class="column nine">
 
 
   <div class="column ">
-
-  {% include story/summary.html %}
-  {% include story/summary-nopic.html %}
-  {% include story/summary-nopic.html %}
+  <h2>Archive</h2>
   {% include story/summary.html %}
   {% include story/summary.html %}
   {% include story/summary.html %}
-  {% include story/summary-nopic.html %}
+  {% include story/summary.html %}
   {% include story/summary.html %}
   
   <hr style="visibility: hidden">
@@ -31,3 +28,4 @@ title: Category
 
 
 {% include sidebar.html %}
+</div>
