--- a/_source/contact.html
+++ b/_source/contact.html
@@ -2,7 +2,7 @@
 layout: default
 title: Contact
 ---
-
+<div class="row" id="main">
 <div class="nine column">
 <h3 class="subheader">
   CQ activity seeks employees to share articles about what is happening in their locations. <br><small>If you have a story to share, please fill out the following:</small>
@@ -29,3 +29,4 @@ title: Contact
 
 </div>
 {% include sidebar.html %}
+</div>
