--- a/_source/index.html
+++ b/_source/index.html
@@ -1,19 +1,20 @@
 ---
 layout: default
-title: Index
+title: index
 ---
+
+{% include orbit.html %}
+
+<div class="row" id="main">
 <div class="column nine">
-    
-  {% include orbit.html %}
 
   <div class="row ">
+    <h2>Featured</h2>
+    {% include story/summary.html %}
+    {% include story/summary.html %}
+    {% include story/summary.html %}
 
-    {% include story/summary.html %}
-    {% include story/summary.html %}
-    {% include story/summary-nopic.html %}
-    {% include story/summary.html %}
-
-    <a class="right" href="category.html">
+    <a class="right archive-link" href="category.html">
       <strong >
         View archive
       </strong>
@@ -29,3 +30,4 @@ title: Index
 
 
 {% include sidebar.html %}
+</div>
