--- a/_source/single.html
+++ b/_source/single.html
@@ -2,7 +2,7 @@
 layout: default
 title: Page3
 ---
-
+<div class="row" id="main">
   <div class="column nine">
     <img src="http://fakeimg.pl/700x300" alt="">
     <a href="single.html"><h2><small>Title of story without picture</small></h2></a>
@@ -35,4 +35,4 @@ title: Page3
   </div>
 
   {% include sidebar.html %}
-
+</div>
